fit:增加老师模块
